<resources>
    <string name="app_name">imin2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="passwort">Passwort</string>
    <string name="e_mail">E-Mail</string>
    <string name="login">Login</string>
    <string name="registrieren">Registrieren</string>
    <string name="imin">imin</string>
    <string name="loginBig">LOGIN</string>
    <string name="name_des_users">Name des Users</string>
    <string name="eventtitle">Eventtitle</string>
    <string name="textview">TextView</string>
    <string name="eventdate">EventDate</string>
    <string name="hier_steht_eine_eventbeschreibung">Hier steht eine Eventbeschreibung</string>
    <string name="x">X</string>

</resources>